@@ -1,5 +1,10 @@
 2015-05-20  Mark Wielaard  <mjw@redhat.com>
 
+	* run-addr2line-test.sh: Add -a test variants.
+	* run-addr2line-i-test.sh: Likewise.
+
+2015-05-20  Mark Wielaard  <mjw@redhat.com>
+
 	* run-addrname-test.sh: Make sure all input addresses are hex.
 
 2015-05-04  Max Filippov  <jcmvbkbc@gmail.com>
