@@ -2,6 +2,8 @@ Version 0.162
 
 libdw: Install new header elfutils/known-dwarf.h.
 
+addr2line: New option -a, --addresses to print address before each entry.
+
 Version 0.161
 
 libdw: New function dwarf_peel_type. dwarf_aggregate_size now uses
